fixed the styling for the areas covered.

--- a/src/templates/bokkas-website/css/rebecca-cheri.css
+++ b/src/templates/bokkas-website/css/rebecca-cheri.css
@@ -31,9 +31,15 @@ html, body {
 #header { border-left: 1px solid #848284; border-top: 1px solid #848284; border-right: 1px solid #848284; margin:10px 0 0; height:300px; position: relative; background:url('/templates/bokkas-website/images/headline.jpg') no-repeat right; }
 #content { border:1px solid #848284; background: white; padding: 2em 2em 1em 2em; font-size: 1.2em; }
 
+/* main areas covered */
+.main-areas-covered { }
+.main-areas-covered .blurb { padding: 1em; }
+.main-areas-covered .areas { margin: 0 0 0 5em; float: left; width: 32em; padding: 0; list-style: none; }
+.main-areas-covered .areas li { float: left; width: 8em; margin: 0; padding: 0 }
 
 /* Prices */
 .price-list { }
+.price-list .section { padding-bottom: 1em; }
 .price-list .service {}
 .price-list .price { float: right; }
 .even { background-color: #F1F0F1; }
